# MLX-H-Neuron-Detector

./: .gitignore  README.md  app.py  main.py  pyproject.toml
answer_check/: Cargo.toml  pyproject.toml
answer_check/src/: lib.rs
experimentation/: harness_testing.ipynb  minimax_21_harness_testing.ipynb  modernbert_nli_eval.py  modernbert_nli_testing.py  st_sampling_dial.py
experimentation/h-neuron-bert/training/: train.py
experimentation/modernbert-qna-testing-iso/: README.md  main.py  modernbert_qna_testing.py  pyproject.toml
experimentation/synthetic-data-gen/: hallucination_generation.py  split.py
experimentation/synthetic-data-gen/nemotron-augmentation/: nemotron_hallucination_generation.py
h-neuron-bert/: .gitignore
h-neuron-bert/inference-testing/: inference-testing.py  inference.py
h-neuron-bert/training/: train.py
modern-bert-api/: README.md  main.py  pyproject.toml
synthetic-data-gen/: hallucination_generation.py  split.py  truth_wrapping_generation.py
synthetic-data-gen/nemotron-augmentation/: nemotron_truth_wrapping_generation.py
