[project]
name = "mlx-h-neuron-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "answer-check",
    "asitop>=0.0.24",
    "datasets>=4.8.4",
    "mlx>=0.31.1",
    "ollama>=0.6.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "wikipedia-tool",
]

[tool.uv.workspace]
members = [
    "answer_check",
]

[tool.uv.sources]
answer-check = { workspace = true }
wikipedia-tool = { git = "https://github.com/dzur658/wikipedia-tool.git" }
