[project]
name = "mlx-h-neuron-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "answer-check",
    "asitop>=0.0.24",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "mlx>=0.31.1",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "torch>=2.11.0",
    "transformers==5.4.0",
    "wikipedia-tool",
]

[tool.uv.workspace]
members = [
    "answer_check",
    "experimentation/modernbert-qna-testing-iso",
]

[tool.uv.sources]
answer-check = { workspace = true }
wikipedia-tool = { git = "https://github.com/dzur658/wikipedia-tool.git" }
