[package]
name = "answer_check"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "answer_check"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
ort = "2.0.0-rc.2"
tokenizers = "0.19.1"
ureq = "2.9.1"
ndarray = "0.17.2"