[project]
name = "modern-bert-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "transformers==4.57.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.34.0",
]

# prevent syncing with root workspace
[tool.uv.workspace]